# blog

./: .gitignore  about.rst  contact.markdown  index.html  my-site.cabal  site.hs  stack.yaml
_site/: contact.html  tags.html
_site/css/styles/: atom-one-dark-reasonable.css  default.css  github-gist.css  isbl-editor-light.css  magula.css  mono-blue.css  nnfx-dark.css  nnfx.css  school-book.css  shades-of-purple.css
_site/posts/: 2020-07-11-testing-org.html
_site/tags/: stuff.html
bib/: references.bib
css/: tufte-ibm.css
css/styles/: default.css
docs/: about.html  archive.html  contact.html  index.html
docs/css/: tufte-ibm.css
docs/css/styles/: arduino-light.css  gml.css  gradient-dark.css  hopscotch.css  lioshi.css  night-owl.css  srcery.css
docs/drafts/: fold-themes-and-variations.html  proof-by-contradiction.html  tufte.html
docs/js/: highlight.pack.js
docs/posts/: 2015-08-12-spqr.html  2015-10-07-rosa-rosa-rosam.html  2015-11-28-carpe-diem.html  2015-12-07-tu-quoque.html  2020-07-11-testing-org.html  tufte.html
docs/tags/: haskell.html
drafts/: fold-themes-and-variations.org  proof-by-contradiction.org
posts/: 2015-11-28-carpe-diem.markdown  2020-07-11-testing-org.org  test.org  tufte.markdown
templates/: archive.html  default.html  post-list.html  post.html
