name:               my-site
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.13.*
                  , pandoc == 2.9.2.1
                  , pandoc-sidenote
  ghc-options:      -threaded
  default-language: Haskell2010
